# dgm-lib

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  android configure.txt  changelog.txt  make-release.bat
.github/workflows/: android.yml  build-test-package.yml  cmake.yml  cppcheck.yml  integration.yml  main-clang-ubuntu.yml  main-clang.yml  main.yml  release.yml  static_analysis.yml
cmake/: cpp-init.cmake  cpp.cmake  dependencies.cmake  dgm-libConfig.cmake.in  functions.cmake  get_cpp_init.cmake  utils.cmake  version.cmake
docs/: app.md  camera.md  integration.md  texture_atlas.md
examples/: CMakeLists.txt
examples/example-01-app/: CMakeLists.txt  Main.cpp
examples/example-01-tilemap/: CMakeLists.txt  Main.cpp
examples/example-02-controller/: CMakeLists.txt  Main.cpp
examples/example-03-math/: CMakeLists.txt  Main.cpp
examples/example-04-particle-effects/: CMakeLists.txt  EffectBloodSpatter.hpp  EffectStarfield.hpp  EffectTexturedSmoke.hpp  EffectWaterFountain.hpp  Main.cpp  ParticleEffectBase.hpp
examples/example-05-camera-manual-control/: CMakeLists.txt  Main.cpp
examples/example-05-pathfind/: CMakeLists.txt  Main.cpp
examples/example-06-simple-ai/: CMakeLists.txt  Main.cpp
examples/example-06-spatial-buffer/: CMakeLists.txt  Main.cpp
examples/example-07-spatial-buffer/: CMakeLists.txt  Main.cpp
examples/example-07-texture-atlas/: CMakeLists.txt  Main.cpp
examples/example-08-pathfind/: CMakeLists.txt  Main.cpp
examples/example-08-tilemap/: CMakeLists.txt  Main.cpp
examples/example-09-collisions/: CMakeLists.txt  Main.cpp
examples/example-10-camera-minimap/: CMakeLists.txt  Main.cpp
examples/example-11-appstate/: CMakeLists.txt  Main.cpp  UI.hpp
examples/example-12-raycaster/: CMakeLists.txt  Main.cpp
examples/example-android/: Readme.md
examples/example-android/app/: build.gradle.kts
examples/example-android/app/src/main/: AndroidManifest.xml
examples/example-android/app/src/main/cpp/: CMakeLists.txt  main.cpp
examples/example-xx-simple-ai/: Actor.hpp
examples/resources/: tileset.png.clip
examples/shared/: CMakeLists.txt  DemoData.cpp  DemoData.hpp  FpsCounter.hpp  Helpers.hpp  Level.cpp  Level.hpp  SimpleController.cpp  SimpleController.hpp  WhiteRectangleParticle.hpp
integration_tests/cpm/: CMakeLists.txt  Main.cpp
integration_tests/cpm_look_for_external_json/: CMakeLists.txt
integration_tests/cpm_look_for_external_sfml/: CMakeLists.txt  Main.cpp
integration_tests/fetch_git/: CMakeLists.txt  Main.cpp
integration_tests/fetch_release/: CMakeLists.txt
integration_tests/fetch_release/src/: Main.cpp
lib/: .clang-tidy  CMakeLists.txt
lib/benchmarks/: CMakeLists.txt
lib/benchmarks/src/: Collision.cpp  Collision.hpp  Main.cpp
lib/include/DGM/: dgm.hpp
lib/include/DGM/classes/: Animation.hpp  App.hpp  AppState.hpp  AppStateConfig.hpp  Buffer.hpp  Camera.hpp  Clip.hpp  Collision.hpp  Compatibility.hpp  Controller.hpp  Conversion.hpp  DynamicBuffer.hpp  Error.hpp  JsonLoader.hpp  LoaderInterface.hpp  Math.hpp  NavMesh.hpp  Objects.hpp  Particle.hpp  ParticleSystem.hpp  ParticleSystemInterface.hpp  ParticleSystemRenderer.hpp  Path.hpp  Raycaster.hpp  ResourceManager.hpp  RingBuffer.hpp  Shell.hpp  SpatialBuffer.hpp  SpatialIndex.hpp  StaticBuffer.hpp  TextureAtlas.hpp  TileMap.hpp  Time.hpp  Traits.hpp  Utility.hpp  Window.hpp
lib/private_include/: JumpPointSearchUtilities.hpp  VBOHelper.hpp
lib/src/: Animation.cpp  App.cpp  Camera.cpp  Clip.cpp  Collision.cpp  Controller.cpp  Conversion.cpp  JsonLoader.cpp  Math.cpp  NavMesh.cpp  Objects.cpp  Particle.cpp  ParticleSystem.cpp  ParticleSystemRenderer.cpp  Raycaster.cpp  ResourceManager.cpp  Shell.cpp  TextureAtlas.cpp  TileMap.cpp  Utility.cpp  Window.cpp
lib/tests/: CMakeLists.txt  Controller.cpp
lib/tests/include/: TestDataDir.hpp
lib/tests/src/: Animation.cpp  App.cpp  AppTests.cpp  Buffer.cpp  Camera.cpp  Clip.cpp  Collision.cpp  Controller.cpp  Conversion.cpp  DynamicBuffer.cpp  JsonLoader.cpp  Math.cpp  NavMesh.cpp  Path.cpp  ResourceManager.cpp  SpatialBuffer.cpp  StaticBuffer.cpp  TestdataDir.hpp.in  TileMap.cpp  Traits.cpp  Utility.cpp
lib/tests/testdata/: navmesh_crashing_after_several_queries.lvd
sandbox/: CMakeLists.txt  Main.cpp
tests/: CMakeLists.txt
tests/include/: CustomComparators.hpp  DemoData.hpp  TestDataDir.hpp
tests/src/: Animation.cpp  AppTests.cpp  Camera.cpp  Clip.cpp  Collision.cpp  Controller.cpp  DynamicBuffer.cpp  JsonLoader.cpp  Math.cpp  NavMesh.cpp  Path.cpp  Raycaster.cpp  ResourceManager.cpp  SpatialBuffer.cpp  StaticBuffer.cpp  TextureAtlas.cpp  TileMap.cpp  Utility.cpp
